--- a/fluent.html
+++ b/fluent.html
@@ -37,23 +37,12 @@
             </ul>
         </nav>
         </div>
-        <div id="projnav">
-            <a href="holomessage.html">
-                  <img src="assets/hololens_messenger/holologo.png" alt="Placeholder"></img>
-            </a>
-            <a href="fluent.html">
-                <img src="assets/fluent/p1image.png" alt="Project 1 Image"></img>
-            </a>
-            <a href="https://people.rit.edu/~jdk1061/web_mobile_final_project/index.php">
-                <img src="assets/wmii/jetcarrierasset.png" alt="Placeholder"></img>
-            </a>
-        </div>
     </header>
     <main>
         <div class="projectgridc">
             <h1>Fluent Design File Explorer</h1>
 
-            <img class="projectpic" src="assets/fluent/explorer.png" alt="File Explorer Redesign" ></img>
+            <img class="projectpic" src="assets/fluent/explorer.png" alt="File Explorer Redesign" >
 
             <p>This is simply a personal exploration of the Fluent Design System introduced by Microsoft in 2017. I wanted to explore how the various requirements could be applied to a core part of the user experience in Windows 10: the File Explorer.</p>
 
