--- a/holomessage.html
+++ b/holomessage.html
@@ -37,17 +37,6 @@
             </ul>
         </nav>
         </div>
-        <div id="projnav">
-            <a href="holomessage.html">
-                  <img src="assets/hololens_messenger/holologo.png" alt="Placeholder"></img>
-            </a>
-            <a href="fluent.html">
-                <img src="assets/fluent/p1image.png" alt="Project 1 Image"></img>
-            </a>
-            <a href="https://people.rit.edu/~jdk1061/web_mobile_final_project/index.php">
-                <img src="assets/wmii/jetcarrierasset.png" alt="Placeholder"></img>
-            </a>
-        </div>
     </header>
     <main>
         <div class="projectgridc">
@@ -63,7 +52,7 @@
 
             <h2>The Process</h2>
 
-            <img class="projectpic" id="taskflow" src="assets/hololens_messenger/user_taskflow.PNG" alt="User Taskflow"></img>
+            <img class="projectpic" id="taskflow" src="assets/hololens_messenger/user_taskflow.PNG" alt="User Taskflow">
 
             <p>When mapping out the basic functions that a user could perform, I had to think about where holograms would be placed in the environment. The placement of holograms had to make sense based on the action being performed. The user's vision can have a different focus based on the action being performed, so placement of holograms should reflect this placement of focus.</p>
 
