--- a/pics.html
+++ b/pics.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Jacob Kinley | Projects</title>
+    <title>Jacob Kinley | PICS Telecom International</title>
     <link rel="stylesheet" href="assets/css/style.css">
     <script>
 
@@ -39,29 +39,12 @@
         </div>
     </header>
     <main>
-        <div id="projectgrid">
-            <div class="proj">
-                <h1>PICS Telecom International</h1>
-                <a href="pics.html">
-                    <img src="assets/pics/pamslogo.png" alt="PAMS">
-                </a>
-                <p>UI design for a customer facing application at PICS Telecom International.</p>
-            </div>
-            <div class="proj">
-                <h1>HoloLens Messenger</h1>
-                <a href="holomessage.html">
-                    <img src="assets/hololens_messenger/holologo.png" alt="HoloLens Messenger"></img>
-                </a>
-                <p>Design and prototype of a messaging app for the Microsoft HoloLens.</p>
-            </div>
-            <div class="proj">
-                <h1>Fluent Design File Explorer</h1>
-                <a href="fluent.html">
-                    <img src="assets/fluent/p1image.png" alt="Project 1 Image"></img>
-                </a>
-                <p>A redesign of the Windows File Explorer using the Microsoft Fluent Design System guidelines.</p>
-            </div>
+        <div class="projectgridc">
+            <h1>Material PAMS</h1>
+
+            <img class="projectpic" src="assets/fluent/explorer.png" alt="File Explorer Redesign">       
         </div>
+
     </main>
     <footer>
         <div id="footwrap">
