--- a/xyz.html
+++ b/xyz.html
@@ -11,10 +11,8 @@
 </head>
 <body onload="document.body.style.opacity='1'">
     <header>
-        <div id="headwrap">
-            <div id="monogram">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 140.6 183.6"><defs><style>.cls-1{fill:#E0162B;}</style></defs><title>Asset 1</title><g id="Layer_2" data-name="Layer 2"><g id="Layer_1-2" data-name="Layer 1"><path class="cls-1" d="M0,177.2,2.8,172a55,55,0,0,0,23.8,6C50,178,56,165.4,56,147.2V46.8H6.8V41.2H62V146c0,23.6-8.8,37.6-36.4,37.6A60.52,60.52,0,0,1,0,177.2ZM48.8,8.4c0-5.2,3.6-8.4,8-8.4s8,3.2,8,8.4-3.6,8.4-8,8.4S48.8,13.6,48.8,8.4Z"/><path class="cls-1" d="M59.8,101.6h.8l65.2-60.4h8l-74,68m28-29.6,4.4-4.4,48.4,61.6h-7.2Z"/></g></g></svg>
-            </div>
+        <div id="logo">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 140.6 183.6"><defs><style>.cls-1{fill:#E0162B;}</style></defs><title>Asset 1</title><g id="Layer_2" data-name="Layer 2"><g id="Layer_1-2" data-name="Layer 1"><path class="cls-1" d="M0,177.2,2.8,172a55,55,0,0,0,23.8,6C50,178,56,165.4,56,147.2V46.8H6.8V41.2H62V146c0,23.6-8.8,37.6-36.4,37.6A60.52,60.52,0,0,1,0,177.2ZM48.8,8.4c0-5.2,3.6-8.4,8-8.4s8,3.2,8,8.4-3.6,8.4-8,8.4S48.8,13.6,48.8,8.4Z"/><path class="cls-1" d="M59.8,101.6h.8l65.2-60.4h8l-74,68m28-29.6,4.4-4.4,48.4,61.6h-7.2Z"/></g></g></svg>
         </div>
     </header>
     <nav>
@@ -27,40 +25,39 @@
             </div>
             <div id="projectgrid">
                 <div class="proj">
+                    <h1>PICS Telecom International</h1>
+                    <a href="pics.html">
+                        <img src="assets/pics/pams.png" alt="Material PAMS">
+                    </a>
+                    <p>UI design for a customer facing application at PICS Telecom International.</p>
+                </div>
+                <div class="proj">
                     <h1>HoloLens Messenger</h1>
                     <a href="holomessage.html">
-                        <img src="assets/hololens_messenger/holologo.png" alt="HoloLens Messenger"></img>
+                        <img src="assets/hololens_messenger/holologo.png" alt="HoloLens Messenger">
                     </a>
                     <p>Design and prototype of a messaging app for the Microsoft HoloLens.</p>
                 </div>
                 <div class="proj">
                     <h1>Fluent Design File Explorer</h1>
                     <a href="fluent.html">
-                        <img src="assets/fluent/p1image.png" alt="Project 1 Image"></img>
+                        <img src="assets/fluent/p1image.png" alt="Project 1 Image">
                     </a>
                     <p>A redesign of the Windows File Explorer using the Microsoft Fluent Design System guidelines.</p>
                 </div>
-                <div class="proj">
-                    <h1>Web and Mobile II Final Project</h1>
-                    <a href="https://people.rit.edu/~jdk1061/web_mobile_final_project/index.php">
-                        <img src="assets/wmii/jetcarrierasset.png" alt="web mobile ii final"></img>
-                    </a>
-                    <p>Individual project to create a website about my favorite place. Utilizes css grid for layout and php for page creation.</p>
-                </div>
             </div>
             <div id="aboutgrid">
-                <p>I’m a 4th year Human Centered Computing student at Rochester Institute of Technology. I originally came in as a computer science student, but learned that I was drawn more to the design and usability of the systems I was working on than the algorithms behind them. Halfway through my second year, I learned about a new major called Human Centered Computing and instantly knew it was the right fit. I’m refactoring how I approach problem-solving, but that’s just another step in the development of a better me.</p>
-                <p>I am a student ambassador for my major’s department, and I have stepped into a leadership position because of it. I oversee bringing student feedback and criticism to the department’s attention. I am also the President of the RIT UX Club where I run club meetings.</p>
-                <p>I believe programs and interfaces should augment the user. They should elicit a sense of discovery, play, and achievement. They should not feel mysterious, unwieldy, or hard to use. The end goals of programs and interfaces vary widely, but the user experiences should follow these core tenets.</p>
-                <p>Feel free to have a look at my resume or reach out to me!</p>
+                <p>I’m a 4th year Human Centered Computing student at Rochester Institute of Technology. I had a short stint as a Computer Science student, but I was frequently more concerned with <em>how</em> someone was using a system rather than the system itself.</p>
+                <p>I am a student ambassador for my major’s department, where I bring student feedback directly to department heads. I am also the President of the RIT UX Club where I head club meetings.</p>
+                <p>Feel free to have a look at my resume and reach out to me!</p>
             </div>
         </div>
     </main>
     <footer>
         <div id="footwrap">
-        <div>&copy Jacob Kinley</div>
-        <div>|</div>
-        <div><a href="mailto:jdk1061@rit.edu">Contact me!</a></div>
+            <div>&copy Jacob Kinley</div>
+            <div>|</div>
+            <div><a href="mailto:jdk1061@rit.edu">Contact me!</a></div>
         </div>
     </footer>
 </body>
