--- a/projects.html
+++ b/projects.html
@@ -43,7 +43,7 @@
             <div class="proj">
                 <h1>PICS Telecom International</h1>
                 <a href="pics.html">
-                    <img src="assets/pics/pamslogo.png" alt="PAMS">
+                    <img src="assets/images/placeholder.png" alt="PAMS">
                 </a>
                 <p>UI design for a customer facing application at PICS Telecom International.</p>
             </div>
