--- a/xyz.html
+++ b/xyz.html
@@ -23,29 +23,38 @@
                 <h1>Hey, I'm Jacob Kinley</h1>
                 <img src="assets/images/Profile.png" alt="Image of Jacob Kinley">
             </div>
+            <h1 class="separator">Things I've made</h1>
             <div id="projectgrid">
                 <div class="proj">
-                    <h1>PICS Telecom International</h1>
+                    <h1>PICS UI</h1>
                     <a href="pics.html">
-                        <img src="assets/pics/pams.png" alt="Material PAMS">
+                        <img src="assets/images/placeholder.png" alt="Material PAMS">
                     </a>
-                    <p>UI design for a customer facing application at PICS Telecom International.</p>
+                    <p>LoFi and HiFi UI for a customer web application at PICS Telecom International.</p>
+                </div>
+                <div class="proj">
+                    <h1>Electoral</h1>
+                    <a href="electoral.html">
+                        <img src="assets/images/placeholder.png" alt="Project 1 Image">
+                    </a>
+                    <p>LoFi and HiFi design and prototype of an app to keep track of elections worldwide.</p>
                 </div>
                 <div class="proj">
                     <h1>HoloLens Messenger</h1>
                     <a href="holomessage.html">
                         <img src="assets/hololens_messenger/holologo.png" alt="HoloLens Messenger">
                     </a>
-                    <p>Design and prototype of a messaging app for the Microsoft HoloLens.</p>
+                    <p>LoFi design and prototype of a messaging app for the Microsoft HoloLens.</p>
                 </div>
                 <div class="proj">
-                    <h1>Fluent Design File Explorer</h1>
+                    <h1>Fluent File Explorer</h1>
                     <a href="fluent.html">
-                        <img src="assets/fluent/p1image.png" alt="Project 1 Image">
+                        <img src="assets/fluent/p1image.png" alt="Fluent">
                     </a>
-                    <p>A redesign of the Windows File Explorer using the Microsoft Fluent Design System guidelines.</p>
+                    <p>A HiFi redesign of the Windows File Explorer using the Microsoft Fluent Design System guidelines.</p>
                 </div>
             </div>
+            <h1 class="separator">About Me</h1>
             <div id="aboutgrid">
                 <p>I’m a 4th year Human Centered Computing student at Rochester Institute of Technology. I had a short stint as a Computer Science student, but I was frequently more concerned with <em>how</em> someone was using a system rather than the system itself.</p>
                 <p>I am a student ambassador for my major’s department, where I bring student feedback directly to department heads. I am also the President of the RIT UX Club where I head club meetings.</p>
@@ -55,9 +64,7 @@
     </main>
     <footer>
         <div id="footwrap">
-            <div>&copy Jacob Kinley</div>
-            <div>|</div>
-            <div><a href="mailto:jdk1061@rit.edu">Contact me!</a></div>
+            <div>&copy Jacob Kinley | <a href="assets/resume/Kinley_resume_fall_2018_v2.pdf">Resume</a> | <a href="mailto:jdk1061@rit.edu">Contact me!</a></div>
         </div>
     </footer>
 </body>
