--- a/pics.html
+++ b/pics.html
@@ -18,23 +18,6 @@
                 </a>
             </div>
         <nav>
-            <ul>
-                <li>
-                    <a href="projects.html">
-                        Works<div class="selected"></div>
-                    </a>
-                </li>
-                <li>
-                    <a href="about.html">
-                        Me<div class="unselected"></div>
-                    </a>
-                </li>
-                <li>
-                    <a href="resume.html">
-                        Resume<div class="unselected"></div>
-                    </a>
-                </li>
-            </ul>
         </nav>
         </div>
     </header>
@@ -42,7 +25,7 @@
         <div class="projectgridc">
             <h1>Material PAMS</h1>
 
-            <img class="projectpic" src="assets/fluent/explorer.png" alt="File Explorer Redesign">       
+            <img class="projectpic" src="assets/images/placeholder.png" alt="File Explorer Redesign">       
         </div>
 
     </main>
