--- a/electoral.html
+++ b/electoral.html
@@ -25,21 +25,61 @@
 
             <h1>Overview</h1>
 
-            <p></p>
+            <p>Electoral is designed to be a mobile app that enables users to keep up to date on elections around the world. Users can favorite countries and be updated on what elections upcoming. This was a class project from Spring of 2018.</p>
 
             <h1>The Problem</h1>
 
-            <p></p>
+            <p>Friends of mine who are interested in geopolitics have told me that they have a hard time keeping up with elections worldwide. It is difficult to be up to date on the news of many different countries and their elections. Electoral is meant to enable users to keep track of elections without the hassle of scanning through many different news sources for each different country.</p>
 
             <h1>The Process</h1>
 
-            <img class="projectpic" src="" alt="">
+            <p>First I talked with my friends who were interested in the idea in order to get a set of basic requirements. I ended up with the goal statement:</p>
 
-            <p></p>
+            <p>"Electoral will list all upcoming elections in all relevant countries. Countries will be able to be filtered by regions (EU, North America, East Asia, etc.) and users will be able to create their own filters. Electoral will provide users with as much relevant information as possible about an election: which parties are running, party stances, polling data, etc."</p>
+
+            <p>I'm a visual thinker, so I needed to sketch out some basic ideas of how this might work.</p>
+
+            <figure>
+                <img class="projectpic" src="assets/electoral/details.PNG" alt="navigation sketch">
+                <figcaption>Basic navigation flow</figcaption>
+            </figure>
+
+            <figure>
+                <img class="projectpic" src="assets/electoral/filter.PNG" alt="filter sketch">
+                <figcaption>Filter based on region</figcaption>
+            </figure>
+
+            <figure>
+                <img class="projectpic" src="assets/electoral/settings.PNG" alt="settings sketch">
+                <figcaption>Basic settings</figcaption>
+            </figure>
+
+            <figure>
+                <img class="projectpic" src="assets/electoral/switch.PNG" alt="view switch sketch">
+                <figcaption>Switch view from map to list</figcaption>
+            </figure>
+
+            <p>These vague ideas needed to be refined and tested, so I made an interactive lofi prototype in InVision and asked some classmates and friends to help test the design. I had two participants.</p>
+
+            <iframe class="prototype" width="438" height="930" src="//invis.io/6YGIPZSVH24" frameborder="0" allowfullscreen></iframe>
+
+            <p>I explained the purpose of the app to the users and had them explore. They each completed the SUS (System Usability Survey) and gave me feedback through comments. Their SUS scores suggested that the system was pretty easy to learn and use (80/100 and 85/100).</p>
+
+            <p>I was pretty excited to see the results of the user tests. I had made something people could understand through <em>context</em> rather than a boring tutorial.</p>
 
             <h1>The Result</h1>
 
-            <p></p>
+            <figure>
+                <video width="300" height="" controls>
+                    <source src="assets/electoral/HUT2.mp4" type="video/mp4">
+                    Your browser is unsupported
+                </video>
+                <figcaption>An interactive version can be located <a href="https://share.protopie.io/ZXnrFBb2sxz">here</a></figcaption>
+            </figure>
+            
+            <p>The final part of this project was a HiFi prototype (above) and more user testing. A full breakdown of the project can be found <a href="puhw1.html">here</a>.</p>
+
+            <p>I learned quite a bit about user testing from this project. The most important takeaway was better insight in how to take user feedback and use that to improve on a design.</p>
             
         </div>
 
