--- a/pics.html
+++ b/pics.html
@@ -21,13 +21,25 @@
     <main>
         <div class="picsgrid">
 
-            <h1>PICS UI</h1>
+            <h1>PICS UI Design</h1>
+
+            <figure>
+                <img class="projectpic" src="assets/pics/angular.PNG" alt="production code">
+                <figcaption>WIP production code</figcaption>
+            </figure>
 
             <h1>Overview</h1>
 
-            <p></p>
+            <p>PAMS is a customer facing web application that enables users to manage the deinstallation, storage, and resale of their redundant telecommunication network hardware. I was brought on as a UI Design intern to help the IT team make PAMS more appealing to PICS customers in both look and feel.</p>
 
             <h1>The Problem</h1>
+
+            <p>The old PAMS was unintuitive and resource intensive. Customers weren't using it because they found it was easier to just contact PICS directly if they needed something done. This cost PICS hours of personal customer service man-hours.</p>
+
+            <figure>
+                <img class="projectpic" src="assets/pics/pamsprojectinfo.png" alt="PAMS project info">
+                <figcaption>An example of the old PAMS interface (customer info blacked out).</figcaption>
+            </figure>
 
             <p></p>
 
