--- a/xyz.html
+++ b/xyz.html
@@ -30,14 +30,14 @@
                 <div class="proj">
                     <h1>PICS UI</h1>
                     <a href="pics.html">
-                        <img src="assets/images/placeholder.png" alt="Material PAMS">
+                        <img src="assets/pics/pamsblack.png" alt="Material PAMS">
                     </a>
                     <p>LoFi and HiFi UI for a customer web application at PICS Telecom International.</p>
                 </div>
                 <div class="proj">
                     <h1>Electoral</h1>
                     <a href="electoral.html">
-                        <img src="assets/images/placeholder.png" alt="Project 1 Image">
+                        <img src="assets/electoral/electoral.png" alt="Project 1 Image">
                     </a>
                     <p>LoFi and HiFi design and prototype of an app to keep track of elections worldwide.</p>
                 </div>
