--- a/pics.html
+++ b/pics.html
@@ -41,13 +41,26 @@
                 <figcaption>An example of the old PAMS interface (customer info blacked out).</figcaption>
             </figure>
 
-            <p></p>
-
             <h1>The Process</h1>
 
-            <img class="projectpic" src="" alt="">
+            <figure>
+                <img class="projectpic" src="assets/pics/lofi_sketches.jpg" alt="sketches">
+                <figcaption>Sketches of various pages remade with Material Design in mind</figcaption>
+            </figure>
 
-            <p></p>
+            <p>I started sketching basic pages with Google Material Design in mind. Material Design was an ideal choice for a design system for PAMS. Since I was only going to be available for the summer, the IT team needed a design system they could learn on their own and implement with pre-built components. The sketches helped me settle on basic layout ideas.</p>
+
+            <figure>
+                <img class="projectpic" src="assets/pics/lofi_dashboard.png" alt="sketches">
+                <figcaption>LoFi of the dashboard that users are greeted with when logging in.</figcaption>
+            </figure>
+
+            <p>LoFi prototypes were created to convey layout and navigation to the team. The team and I also noticed repeatedly that we didn't have enough requirements from the customers as to what information is necessary to display. I used LoFi designs to meet requirements as they came in because iteration was quick and easy.</p>
+
+            <figure>
+                <img class="projectpic" src="assets/pics/lofi_dashboard.png" alt="sketches">
+                <figcaption>LoFi of the dashboard that users are greeted with when logging in.</figcaption>
+            </figure>
 
             <h1>The Result</h1>
 
