--- a/index.html
+++ b/index.html
@@ -3,36 +3,70 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Jacob Kinley</title>
-    <link rel="stylesheet" href="assets/css/style.css">
+    <title>Jacob Kinley | Home</title>
+    <link rel="stylesheet" href="assets/css/xyz.css">
     <script>
 
     </script>
 </head>
 <body onload="document.body.style.opacity='1'">
+    <header>
+        <div id="logo">
+            <a href="index.html">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 140.6 183.6"><defs><style>.cls-1{fill:#E0162B;}</style></defs><title>Asset 1</title><g id="Layer_2" data-name="Layer 2"><g id="Layer_1-2" data-name="Layer 1"><path class="cls-1" d="M0,177.2,2.8,172a55,55,0,0,0,23.8,6C50,178,56,165.4,56,147.2V46.8H6.8V41.2H62V146c0,23.6-8.8,37.6-36.4,37.6A60.52,60.52,0,0,1,0,177.2ZM48.8,8.4c0-5.2,3.6-8.4,8-8.4s8,3.2,8,8.4-3.6,8.4-8,8.4S48.8,13.6,48.8,8.4Z"/><path class="cls-1" d="M59.8,101.6h.8l65.2-60.4h8l-74,68m28-29.6,4.4-4.4,48.4,61.6h-7.2Z"/></g></g></svg>
+            </a>
+        </div>
+    </header>
+    <nav>
+    </nav>
     <main>
-        <div class="splash">
-        <div class="splashm">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 140.6 183.6"><defs><style>.cls-1{fill:#E0162B;}</style></defs><title>Asset 1</title><g id="Layer_2" data-name="Layer 2"><g id="Layer_1-2" data-name="Layer 1"><path class="cls-1" d="M0,177.2,2.8,172a55,55,0,0,0,23.8,6C50,178,56,165.4,56,147.2V46.8H6.8V41.2H62V146c0,23.6-8.8,37.6-36.4,37.6A60.52,60.52,0,0,1,0,177.2ZM48.8,8.4c0-5.2,3.6-8.4,8-8.4s8,3.2,8,8.4-3.6,8.4-8,8.4S48.8,13.6,48.8,8.4Z"/><path class="cls-1" d="M59.8,101.6h.8l65.2-60.4h8l-74,68m28-29.6,4.4-4.4,48.4,61.6h-7.2Z"/></g></g></svg>
-        </div>
-        <div class="fore">
-            <a href="projects.html">
-                Works<div class="unselected"></div>
-            </a>
-            <a href="about.html">
-                Me<div class="unselected"></div>
-            </a>
-            <a href="resume.html">
-                Resume<div class="unselected"></div>
-            </a>
-        </div>
+        <div id="indexgrid">
+            <div id="megrid">
+                <h1>Hey, I'm Jacob Kinley</h1>
+                <img src="assets/images/Profile.png" alt="Image of Jacob Kinley">
+            </div>
+            <h1 class="separator">Things I've made</h1>
+            <div id="projectgrid">
+                <div class="proj">
+                    <h1>PICS UI</h1>
+                    <a href="pics.html">
+                        <img src="assets/pics/pamsblack.png" alt="Material PAMS">
+                    </a>
+                    <p>LoFi and HiFi UI for a customer web application at PICS Telecom International.</p>
+                </div>
+                <div class="proj">
+                    <h1>Electoral</h1>
+                    <a href="electoral.html">
+                        <img src="assets/electoral/electoral.png" alt="Project 1 Image">
+                    </a>
+                    <p>LoFi and HiFi design and prototype of an app to keep track of elections worldwide.</p>
+                </div>
+                <div class="proj">
+                    <h1>HoloLens Messenger</h1>
+                    <a href="holomessage.html">
+                        <img src="assets/hololens_messenger/holologo.png" alt="HoloLens Messenger">
+                    </a>
+                    <p>LoFi design and prototype of a messaging app for the Microsoft HoloLens.</p>
+                </div>
+                <div class="proj">
+                    <h1>Fluent File Explorer</h1>
+                    <a href="fluent.html">
+                        <img src="assets/fluent/p1image.png" alt="Fluent">
+                    </a>
+                    <p>A HiFi redesign of the Windows File Explorer using the Microsoft Fluent Design System guidelines.</p>
+                </div>
+            </div>
+            <h1 class="separator">About Me</h1>
+            <div id="aboutgrid">
+                <p>I’m a 4th year Human Centered Computing student at Rochester Institute of Technology. I had a short stint as a Computer Science student, but I was frequently more concerned with <em>how</em> someone was using a system rather than the system itself.</p>
+                <p>I am a student ambassador for my major’s department, where I bring student feedback directly to department heads. I am also the President of the RIT UX Club where I head club meetings.</p>
+                <p>Feel free to have a look at my resume and reach out to me!</p>
+            </div>
         </div>
     </main>
     <footer>
         <div id="footwrap">
-        <div>&copy Jacob Kinley</div>
-        <div>|</div>
-        <div><a href="mailto:mailto:jdk1061@rit.edu">Contact me!</a></div>
+            <div>&copy Jacob Kinley | <a href="assets/resume/Kinley_resume_fall_2018_v2.pdf">Resume</a> | <a href="mailto:jdk1061@rit.edu">Contact me!</a></div>
         </div>
     </footer>
 </body>
