--- a/electoral.html
+++ b/electoral.html
@@ -12,7 +12,7 @@
 <body onload="document.body.style.opacity='1'">
     <header>
         <div id="logo">
-            <a href="xyz.html">
+            <a href="index.html">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 140.6 183.6"><defs><style>.cls-1{fill:#E0162B;}</style></defs><title>Asset 1</title><g id="Layer_2" data-name="Layer 2"><g id="Layer_1-2" data-name="Layer 1"><path class="cls-1" d="M0,177.2,2.8,172a55,55,0,0,0,23.8,6C50,178,56,165.4,56,147.2V46.8H6.8V41.2H62V146c0,23.6-8.8,37.6-36.4,37.6A60.52,60.52,0,0,1,0,177.2ZM48.8,8.4c0-5.2,3.6-8.4,8-8.4s8,3.2,8,8.4-3.6,8.4-8,8.4S48.8,13.6,48.8,8.4Z"/><path class="cls-1" d="M59.8,101.6h.8l65.2-60.4h8l-74,68m28-29.6,4.4-4.4,48.4,61.6h-7.2Z"/></g></g></svg>
             </a>
         </div>
@@ -23,15 +23,15 @@
 
             <h1>Electoral</h1>
 
-            <h1>Overview</h1>
+            <h2>Overview</h2>
 
             <p>Electoral is designed to be a mobile app that enables users to keep up to date on elections around the world. Users can favorite countries and be updated on what elections upcoming. This was a class project from Spring of 2018.</p>
 
-            <h1>The Problem</h1>
+            <h2>The Problem</h2>
 
             <p>Friends of mine who are interested in geopolitics have told me that they have a hard time keeping up with elections worldwide. It is difficult to be up to date on the news of many different countries and their elections. Electoral is meant to enable users to keep track of elections without the hassle of scanning through many different news sources for each different country.</p>
 
-            <h1>The Process</h1>
+            <h2>The Process</h2>
 
             <p>First I talked with my friends who were interested in the idea in order to get a set of basic requirements. I ended up with the goal statement:</p>
 
@@ -67,7 +67,7 @@
 
             <p>I was pretty excited to see the results of the user tests. I had made something people could understand through <em>context</em> rather than a boring tutorial.</p>
 
-            <h1>The Result</h1>
+            <h2>The Result</h2>
 
             <figure>
                 <video width="300" height="" controls>
