--- a/index.html
+++ b/index.html
@@ -58,9 +58,15 @@
             </div>
             <h1 class="separator">About Me</h1>
             <div id="aboutgrid">
+
                 <p>I’m a 4th year Human Centered Computing student at Rochester Institute of Technology. I had a short stint as a Computer Science student, but I was frequently more concerned with <em>how</em> someone was using a system rather than the system itself.</p>
+
+                <p>My interests in UX are currently focused on the fuekd if AR and VR. User interactions and experiences are no longer limited to a flat screen, but now focus on more spatial experiences.</p>
+
                 <p>I am a student ambassador for my major’s department, where I bring student feedback directly to department heads. I am also the President of the RIT UX Club where I head club meetings.</p>
+
                 <p>Feel free to have a look at my resume and reach out to me!</p>
+
             </div>
         </div>
     </main>
