--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
                 <p>I’m a 4th year Human Centered Computing student at Rochester Institute of Technology. I had a short stint as a Computer Science student, but I was frequently more concerned with <em>how</em> someone was using a system rather than the system itself.</p>
 
-                <p>My interests in UX are currently focused on the fuekd if AR and VR. User interactions and experiences are no longer limited to a flat screen, but now focus on more spatial experiences.</p>
+                <p>My interests in UX are currently focused on the field of AR and VR. It excites me that user interactions and experiences are no longer limited to a flat screen, but now focus on more spatial experiences.</p>
 
                 <p>I am a student ambassador for my major’s department, where I bring student feedback directly to department heads. I am also the President of the RIT UX Club where I head club meetings.</p>
 
