DaRk ThEmE + iCoNs

--- a/pics.html
+++ b/pics.html
@@ -81,7 +81,7 @@
                 <figcaption>WIP production code</figcaption>
             </figure>
 
-            <p>By the end of the internship, requirements were still messy, but development had to begin. I assisted with implementing Material Design in Angular. I was the main frontend developer, so I was able to dabble in more web development as well as design.</p>
+            <p>By the end of the internship, requirements were still messy, but development had to begin. I assisted with implementing Material Design in Angular. I took on the role of helping frontend development, so I was able to dabble in more web development as well as design.</p>
 
             <p>This was my first experience in making real designs for a real company. I learned how valuable it is to make sure requirements are as concrete as possible before starting designing. If I had better requirements at the beginning, I would have not needed to iterate as many times. My biggest takeaway from this experience was that I truly do like UI design. This internship killed any imposter syndrome I had.</p>
 
