--- a/test.html
+++ b/test.html
@@ -10,6 +10,10 @@
     </script>
 </head>
 <body onload="document.body.style.opacity='1'">
-THIS IS A TEST
+    <main>
+        <header>
+            This page is a test
+        </header>
+    </main>
 </body>
 </html>
