test portfolio changes

--- a/test.html
+++ b/test.html
@@ -10,10 +10,37 @@
     </script>
 </head>
 <body onload="document.body.style.opacity='1'">
+    <header>
+        <span id="name"><a class="nav" href="">Jacob Kinley</a></span>
+        <span id="resume"><a class="nav" href="resume">resume</a></span>
+        <span id="contact"><a class="nav" href="mailto:jdk1061@rit.edu">contact</a></span>
+        <h2></h2>
+    </header>
     <main>
-        <header>
-            This page is a test
-        </header>
+        <h1>Projects</h1>
+        <div class="grid">
+            <a href="">
+                <figure>
+                    <img src="assets/images/placeholder.png">
+                    <figcaption>This is a project I did about X and Y in order to accomplish Z.</figcaption>
+                </figure>
+            </a>
+            <a href="">
+                <figure>
+                    <img src="assets/images/placeholder.png">
+                    <figcaption>This is a project I did about X and Y in order to accomplish Z.</figcaption>
+                </figure>
+            </a>
+            <a href="">
+                <figure>
+                    <img src="assets/images/placeholder.png">
+                    <figcaption>This is a project I did about X and Y in order to accomplish Z.</figcaption>
+                </figure>
+            </a>
+        </div>
     </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
