--- a/test.html
+++ b/test.html
@@ -17,26 +17,36 @@
         <h2></h2>
     </header>
     <main>
-        <h1>Projects</h1>
+        <h1>Hello! I'm Jacob Kinley. I design for humans.</h1>
+        <h2>Projects</h2>
         <div class="grid">
-            <a href="">
-                <figure>
-                    <img src="assets/images/placeholder.png">
-                    <figcaption>This is a project I did about X and Y in order to accomplish Z.</figcaption>
-                </figure>
-            </a>
-            <a href="">
-                <figure>
-                    <img src="assets/images/placeholder.png">
-                    <figcaption>This is a project I did about X and Y in order to accomplish Z.</figcaption>
-                </figure>
-            </a>
-            <a href="">
-                <figure>
-                    <img src="assets/images/placeholder.png">
-                    <figcaption>This is a project I did about X and Y in order to accomplish Z.</figcaption>
-                </figure>
-            </a>
+            <div class="project">
+                <h3>
+                    P1
+                </h3>
+                <img src="assets/images/placeholder.png">
+                <a href="">
+                    This is a project I did about X and Y in order to accomplish Z.
+                </a>
+            </div>
+            <div class="project">
+                <h3>
+                    P2
+                </h3>
+                <img src="assets/images/placeholder.png">
+                <a href="">
+                    This is a project I did about X and Y in order to accomplish Z.
+                </a>
+            </div>
+            <div class="project">
+                <h3>
+                    P3
+                </h3>
+                <img src="assets/images/placeholder.png">
+                <a href="">
+                    This is a project I did about X and Y in order to accomplish Z.
+                </a>
+            </div>
         </div>
     </main>
     <footer>
